--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@
 }
 
 .res-container{
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
     gap: 7px;
@@ -70,11 +71,16 @@
     width: 200px;
     background-color: #f0f0f0;
     padding: 5px;   
-    height: 350px;
-    border-radius: 10px;
+    height: 300px;
+ 
 }
 
 .login{
     padding: 20px;
 }
    
+.filter{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+}
