--- a/index.css
+++ b/index.css
@@ -1,90 +1,1 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-    padding: 10px;
-    padding-right: 20px;
-    align-items: center;
-}
-
-.logo{
-    padding: 5px;
-    width: 120px;
-    border-radius: 50px;
-}
-
-.nav-items > ul{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav-items > ul > li{
-    list-style: none;
-    margin: 0 10px;
-    font-size: larger;
-}
-
-.logo-container{
-    display: flex;
-    align-items: center;
-}
-
-.res-card{
-    width: 200px;
-    margin: 5px;
-    background-color: #f0f0f0;
-    padding: 5px;
-}
-
-.search{
-    padding: 10px;
-}
-
-.res-logo{
-    width: 100%;
-    height: 100px;
-    object-fit: cover;
-}
-
-.res-card:hover{
-    border: 1px solid black;
-    cursor: pointer;
-}
-
-.res-container{
-    padding: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 7px;
-}
-
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 30px;
-}
-
-.shimmer-card{
-    margin: 5px;
-    width: 200px;
-    background-color: #f0f0f0;
-    padding: 5px;   
-    height: 300px;
- 
-}
-
-.login{
-    padding: 20px;
-}
-   
-.filter{
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-
-.user-card{
-    padding: 20px;
-    border: 1px solid black;
-}
+@import "tailwindcss";
